[package]
name = "wcferry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.5"
nng = "1.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
hex = "0.4"

[build-dependencies]
tonic-build = "0.8.4"
